--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ target_link_libraries(sisyphus ${Pangolin_LIBRARIES})
 
 # Build examples
 
-add_executable(ply_reader_example examples/ply_reader_example.cpp)
-target_link_libraries(ply_reader_example sisyphus ${Pangolin_LIBRARIES})
+add_executable(ply_io_example examples/ply_io_example.cpp)
+target_link_libraries(ply_io_example sisyphus ${Pangolin_LIBRARIES})
 
 add_executable(pca_example examples/pca_example.cpp)
 target_link_libraries(pca_example sisyphus ${Pangolin_LIBRARIES})
