Added ASCII support for matrix i/o

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,9 @@ target_link_libraries(kd_tree_example sisyphus ${Pangolin_LIBRARIES})
 add_executable(normal_estimation_example examples/normal_estimation_example.cpp)
 target_link_libraries(normal_estimation_example sisyphus ${Pangolin_LIBRARIES})
 
+add_executable(matrix_io_example examples/matrix_io_example.cpp)
+target_link_libraries(matrix_io_example sisyphus ${Pangolin_LIBRARIES})
+
 # Install target
 
 install(TARGETS sisyphus LIBRARY DESTINATION /usr/local/lib)
