--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,9 @@ target_link_libraries(normal_estimation_example sisyphus ${Pangolin_LIBRARIES})
 add_executable(matrix_io_example examples/matrix_io_example.cpp)
 target_link_libraries(matrix_io_example sisyphus ${Pangolin_LIBRARIES})
 
+add_executable(cloud_visualizer_example examples/cloud_visualizer_example.cpp)
+target_link_libraries(cloud_visualizer_example sisyphus ${Pangolin_LIBRARIES})
+
 # Install target
 
 install(TARGETS sisyphus LIBRARY DESTINATION /usr/local/lib)
