Added images<->cloud conversion utilities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,9 @@ target_link_libraries(connected_component_segmentation_example cilantro ${Pangol
 add_executable(image_viewer_example examples/image_viewer_example.cpp)
 target_link_libraries(image_viewer_example cilantro ${Pangolin_LIBRARIES})
 
+add_executable(image_point_cloud_conversions_example examples/image_point_cloud_conversions_example.cpp)
+target_link_libraries(image_point_cloud_conversions_example cilantro ${Pangolin_LIBRARIES})
+
 # Install target
 
 install(TARGETS cilantro LIBRARY DESTINATION /usr/local/lib)
