Added empty sources for ICP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,9 @@ target_link_libraries(image_viewer_example cilantro ${Pangolin_LIBRARIES})
 add_executable(image_point_cloud_conversions_example examples/image_point_cloud_conversions_example.cpp)
 target_link_libraries(image_point_cloud_conversions_example cilantro ${Pangolin_LIBRARIES})
 
+add_executable(iterative_closest_point_example examples/iterative_closest_point_example.cpp)
+target_link_libraries(iterative_closest_point_example cilantro ${Pangolin_LIBRARIES})
+
 # Install target
 
 install(TARGETS cilantro LIBRARY DESTINATION /usr/local/lib)
