Added rigid transform estimator; refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,11 @@ target_link_libraries(image_point_cloud_conversions_example cilantro ${Pangolin_
 add_executable(iterative_closest_point_example examples/iterative_closest_point_example.cpp)
 target_link_libraries(iterative_closest_point_example cilantro ${Pangolin_LIBRARIES})
 
-add_executable(model_estimators_example examples/model_estimators_example.cpp)
-target_link_libraries(model_estimators_example cilantro ${Pangolin_LIBRARIES})
+add_executable(plane_estimator_example examples/plane_estimator_example.cpp)
+target_link_libraries(plane_estimator_example cilantro ${Pangolin_LIBRARIES})
+
+add_executable(rigid_transform_estimator_example examples/rigid_transform_estimator_example.cpp)
+target_link_libraries(rigid_transform_estimator_example cilantro ${Pangolin_LIBRARIES})
 
 # Install target
 
