--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,9 @@ target_link_libraries(plane_estimator_example cilantro ${Pangolin_LIBRARIES})
 add_executable(rigid_transform_estimator_example examples/rigid_transform_estimator_example.cpp)
 target_link_libraries(rigid_transform_estimator_example cilantro ${Pangolin_LIBRARIES})
 
+add_executable(space_region_example examples/space_region_example.cpp)
+target_link_libraries(space_region_example cilantro ${Pangolin_LIBRARIES})
+
 # Install target
 
 install(TARGETS cilantro LIBRARY DESTINATION /usr/local/lib)
