--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 
 # Packages
 
+find_package(Eigen3 REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(OpenMP)
 if (OPENMP_FOUND)
@@ -18,6 +19,7 @@ if (OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
+include_directories(${EIGEN3_INCLUDE_DIRS})
 include_directories(${Pangolin_INCLUDE_DIRS})
 include_directories(3rd_party)
 include_directories(include)
