CMake minor change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(cilantro)
 
-set(LIBRARY_NAME ${PROJECT_NAME})
-
 # Build setup
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
@@ -31,8 +29,8 @@ include_directories(${OTHER_INCLUDES})
 file(GLOB_RECURSE 3rd_src ${CMAKE_SOURCE_DIR}/src/3rd_party/*.c ${CMAKE_SOURCE_DIR}/src/3rd_party/*.cpp)
 file(GLOB lib_src ${CMAKE_SOURCE_DIR}/src/*.cpp)
 
-add_library(${LIBRARY_NAME} SHARED ${3rd_src} ${lib_src})
-target_link_libraries(${LIBRARY_NAME} ${Pangolin_LIBRARIES})
+add_library(${PROJECT_NAME} SHARED ${3rd_src} ${lib_src})
+target_link_libraries(${PROJECT_NAME} ${Pangolin_LIBRARIES})
 
 # Build examples
 
@@ -42,39 +40,39 @@ if(BUILD_EXAMPLES)
     foreach(example_file ${example_files})
         get_filename_component(example_name ${example_file} NAME_WE)
         add_executable(${example_name} ${example_file})
-        target_link_libraries(${example_name} ${LIBRARY_NAME} ${Pangolin_LIBRARIES})
+        target_link_libraries(${example_name} ${PROJECT_NAME} ${Pangolin_LIBRARIES})
     endforeach(example_file ${example_files})
 endif()
 
 # Package config files
 
-file(REMOVE "${CMAKE_BINARY_DIR}/${LIBRARY_NAME}Targets.cmake")
-export(TARGETS ${LIBRARY_NAME} APPEND FILE "${CMAKE_BINARY_DIR}/${LIBRARY_NAME}Targets.cmake")
+file(REMOVE "${CMAKE_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
+export(TARGETS ${PROJECT_NAME} APPEND FILE "${CMAKE_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
 
-set(CMAKECONFIG_INSTALL_DIR lib/cmake/${LIBRARY_NAME})
+set(CMAKECONFIG_INSTALL_DIR lib/cmake/${PROJECT_NAME})
 file(RELATIVE_PATH REL_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKECONFIG_INSTALL_DIR}" "${CMAKE_INSTALL_PREFIX}/include")
 
 # Build tree config
 set(EXPORT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
-configure_file(${CMAKE_SOURCE_DIR}/${LIBRARY_NAME}Config.cmake.in ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}Config.cmake @ONLY IMMEDIATE)
+configure_file(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}Config.cmake.in ${CMAKE_BINARY_DIR}/${PROJECT_NAME}Config.cmake @ONLY IMMEDIATE)
 
 # Install tree config
 set(EXPORT_INCLUDE_DIR "\${PROJECT_CMAKE_DIR}/${REL_INCLUDE_DIR}")
-configure_file(${CMAKE_SOURCE_DIR}/${LIBRARY_NAME}Config.cmake.in ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${LIBRARY_NAME}Config.cmake @ONLY)
+configure_file(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}Config.cmake.in ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJECT_NAME}Config.cmake @ONLY)
 
 # Add package to CMake package registery for use from the build tree
-option(EXPORT_${LIBRARY_NAME} "Export ${LIBRARY_NAME} package for use by other software" ON)
-if(EXPORT_${LIBRARY_NAME})
-    export(PACKAGE ${LIBRARY_NAME})
+option(EXPORT_${PROJECT_NAME} "Export ${PROJECT_NAME} package for use by other software" ON)
+if(EXPORT_${PROJECT_NAME})
+    export(PACKAGE ${PROJECT_NAME})
 endif()
 
 # Install target
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
-install(TARGETS ${LIBRARY_NAME} EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 
-install(FILES "${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${LIBRARY_NAME}Config.cmake" DESTINATION ${CMAKECONFIG_INSTALL_DIR})
-install(EXPORT ${LIBRARY_NAME}Targets DESTINATION ${CMAKECONFIG_INSTALL_DIR})
+install(FILES "${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJECT_NAME}Config.cmake" DESTINATION ${CMAKECONFIG_INSTALL_DIR})
+install(EXPORT ${PROJECT_NAME}Targets DESTINATION ${CMAKECONFIG_INSTALL_DIR})
 
 # Uninstall target
 
