--- a/cilantroConfig.cmake.in
+++ b/cilantroConfig.cmake.in
@@ -1,10 +1,10 @@
 get_filename_component(PROJECT_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
-set(@LIBRARY_NAME@_INCLUDE_DIRS "@EXPORT_INCLUDE_DIR@;@OTHER_INCLUDES@")
+set(@PROJECT_NAME@_INCLUDE_DIRS "@EXPORT_INCLUDE_DIR@;@OTHER_INCLUDES@")
 
 # Library dependencies (contains definitions for IMPORTED targets)
-if(NOT TARGET @LIBRARY_NAME@ AND NOT @PROJECT_NAME@_BINARY_DIR)
+if(NOT TARGET @PROJECT_NAME@ AND NOT @PROJECT_NAME@_BINARY_DIR)
     include("${PROJECT_CMAKE_DIR}/@PROJECT_NAME@Targets.cmake")
     @ExternConfig@
 endif()
 
-set(@LIBRARY_NAME@_LIBRARIES @LIBRARY_NAME@)
+set(@PROJECT_NAME@_LIBRARIES @PROJECT_NAME@)
