--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 before_install:
   - sudo apt -qq update && sudo apt install g++ libglew-dev
   - wget https://github.com/eigenteam/eigen-git-mirror/archive/master.zip -O eigen.zip && unzip eigen.zip
-  - mkdir -p eigen-master/build && cd eigen-master/build && cmake .. && make -j && sudo make install && cd ../..
+  - mkdir -p eigen-git-mirror-master/build && cd eigen-git-mirror-master/build && cmake .. && make -j && sudo make install && cd ../..
   - wget https://github.com/stevenlovegrove/Pangolin/archive/master.zip -O Pangolin.zip && unzip Pangolin.zip
   - mkdir -p Pangolin-master/build && cd Pangolin-master/build && cmake .. && make -j && sudo make install && cd ../..
 
