--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,9 @@
 # Build/IDE folders
 build/*
 .idea/*
-cmake-build-debug/*
 cmake-build-release/*
+cmake-build-debug/*
 
 # ReadTheDocs
+docs/_build/*
 docs/build/*
