--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: required
 dist: trusty
 
 before_install:
-  - sudo apt -qq update && sudo apt install g++ libglew-dev
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt -qq update && sudo apt install g++-6 libglew-dev
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   - wget https://github.com/eigenteam/eigen-git-mirror/archive/master.zip -O eigen.zip && unzip eigen.zip
   - mkdir -p eigen-git-mirror-master/build && cd eigen-git-mirror-master/build && cmake .. && make -j && sudo make install && cd ../..
   - wget https://github.com/stevenlovegrove/Pangolin/archive/master.zip -O Pangolin.zip && unzip Pangolin.zip
