--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_install:
   - sudo apt -qq update && sudo apt install g++-6 libglew-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   - wget https://github.com/eigenteam/eigen-git-mirror/archive/master.zip -O eigen.zip && unzip eigen.zip
-  - mkdir -p eigen-git-mirror-master/build && cd eigen-git-mirror-master/build && cmake .. && make -j && sudo make install && cd ../..
+  - mkdir -p eigen-git-mirror-master/build && cd eigen-git-mirror-master/build && cmake .. && make -j8 && sudo make install && cd ../..
   - wget https://github.com/stevenlovegrove/Pangolin/archive/master.zip -O Pangolin.zip && unzip Pangolin.zip
-  - mkdir -p Pangolin-master/build && cd Pangolin-master/build && cmake .. && make -j && sudo make install && cd ../..
+  - mkdir -p Pangolin-master/build && cd Pangolin-master/build && cmake .. && make -j8 && sudo make install && cd ../..
 
 language: cpp
 
@@ -25,4 +25,4 @@ script:
   - mkdir build
   - cd build
   - cmake -D CMAKE_BUILD_TYPE=$BUILD_TYPE ..
-  - make -j
+  - make -j8
