Adding option to cmake for running wiht all optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,12 @@ if(OPENMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
-option(ENABLE_NON_DETERMINISTIC_PARALLELISM "Enable parallelization that may produce non-deterministic results" OFF)
+
+if (BUILD_WITH_OPTIMIZATION)
+	option(ENABLE_NON_DETERMINISTIC_PARALLELISM "Enable parallelization that may produce non-deterministic results" ON)
+else()
+	option(ENABLE_NON_DETERMINISTIC_PARALLELISM "Enable parallelization that may produce non-deterministic results" OFF)
+endif()
 
 set(OTHER_INCLUDES ${EIGEN3_INCLUDE_DIRS} ${Pangolin_INCLUDE_DIRS})
 
@@ -35,7 +40,11 @@ file(GLOB lib_src ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
 add_library(${PROJECT_NAME} SHARED ${3rd_src} ${lib_include} ${lib_src})
 target_link_libraries(${PROJECT_NAME} ${Pangolin_LIBRARIES})
-target_compile_options(${PROJECT_NAME} PUBLIC -O3)
+if (BUILD_WITH_OPTIMIZATION)
+	target_compile_options(${PROJECT_NAME} PUBLIC -O3 -march=native -mtune=native)
+else()
+	target_compile_options(${PROJECT_NAME} PUBLIC -O3)
+endif()
 
 # Configure preprocessor definitions
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME}/config.hpp")
