--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,11 @@ cmake_minimum_required(VERSION 2.8)
 project(cilantro)
 
 # Build setup
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
-
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_STANDARD 11)
 
 # Packages
-
 find_package(Eigen3 REQUIRED)
 find_package(Pangolin QUIET)
 if(Pangolin_FOUND)
@@ -21,17 +18,14 @@ if(OPENMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
-
-if (BUILD_WITH_OPTIMIZATION)
-	option(ENABLE_NON_DETERMINISTIC_PARALLELISM "Enable parallelization that may produce non-deterministic results" ON)
-else()
-	option(ENABLE_NON_DETERMINISTIC_PARALLELISM "Enable parallelization that may produce non-deterministic results" OFF)
-endif()
-
 set(OTHER_INCLUDES ${EIGEN3_INCLUDE_DIRS} ${Pangolin_INCLUDE_DIRS})
 
 include_directories(include ${CMAKE_CURRENT_BINARY_DIR}/include)
 include_directories(${OTHER_INCLUDES})
+
+# Build options
+option(ENABLE_NATIVE_BUILD_OPTIMIZATIONS "Enable parallelization that may produce non-deterministic results" ON)
+option(ENABLE_NON_DETERMINISTIC_PARALLELISM "Enable parallelization that may produce non-deterministic results" ON)
 
 # Build library
 file(GLOB_RECURSE 3rd_src ${CMAKE_CURRENT_SOURCE_DIR}/src/3rd_party/*.c ${CMAKE_CURRENT_SOURCE_DIR}/src/3rd_party/*.cpp)
@@ -40,7 +34,7 @@ file(GLOB lib_src ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
 add_library(${PROJECT_NAME} SHARED ${3rd_src} ${lib_include} ${lib_src})
 target_link_libraries(${PROJECT_NAME} ${Pangolin_LIBRARIES})
-if (BUILD_WITH_OPTIMIZATION)
+if (ENABLE_NATIVE_BUILD_OPTIMIZATIONS)
 	target_compile_options(${PROJECT_NAME} PUBLIC -O3 -march=native -mtune=native)
 else()
 	target_compile_options(${PROJECT_NAME} PUBLIC -O3)
@@ -50,7 +44,6 @@ endif()
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME}/config.hpp")
 
 # Package config files
-
 file(REMOVE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
 export(TARGETS ${PROJECT_NAME} APPEND FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
 
@@ -72,7 +65,6 @@ if(EXPORT_${PROJECT_NAME})
 endif()
 
 # Install target
-
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME}/config.hpp" DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
@@ -81,7 +73,6 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJECT_NAM
 install(EXPORT ${PROJECT_NAME}Targets DESTINATION ${CMAKECONFIG_INSTALL_DIR})
 
 # Uninstall target
-
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
 add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 
@@ -89,7 +80,6 @@ add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_D
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
 
 # Build examples
-
 option(BUILD_EXAMPLES "Build small example apps" ON)
 if(BUILD_EXAMPLES AND Pangolin_FOUND)
     file(GLOB example_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp)
@@ -97,5 +87,10 @@ if(BUILD_EXAMPLES AND Pangolin_FOUND)
         get_filename_component(example_name ${example_file} NAME_WE)
         add_executable(${example_name} ${example_file})
         target_link_libraries(${example_name} ${PROJECT_NAME} ${Pangolin_LIBRARIES})
+        if (ENABLE_NATIVE_BUILD_OPTIMIZATIONS)
+            target_compile_options(${example_name} PUBLIC -O3 -march=native -mtune=native)
+        else()
+            target_compile_options(${example_name} PUBLIC -O3)
+        endif()
     endforeach(example_file ${example_files})
 endif()
