--- a/cilantroConfig.cmake.in
+++ b/cilantroConfig.cmake.in
@@ -1,5 +1,5 @@
 get_filename_component(PROJECT_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
-set(@PROJECT_NAME@_INCLUDE_DIRS "@EXPORT_INCLUDE_DIR@;@OTHER_INCLUDES@")
+set(@PROJECT_NAME@_INCLUDE_DIRS "@EXPORT_INCLUDE_DIR@;@OTHER_INCLUDE_DIRS@")
 
 # Library dependencies (contains definitions for IMPORTED targets)
 if(NOT TARGET @PROJECT_NAME@ AND NOT @PROJECT_NAME@_BINARY_DIR)
